--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                   <ul class="list-share-2">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
                     <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    
                   </ul>
                   <a href="quote.html">
                   <button class="btn">Request a quote</button>
@@ -108,11 +108,11 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Products</a>
+                    </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Product</a>
-                    </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -224,7 +224,7 @@
                       data-caption-delay="0">Zifra Creations</span></h1>
                   <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Discover the
                     epitome of style and sophistication with Zifra Creations. Elevate your wardrobe with our premium
-                    men's apparel designed for the modern gentleman!</p>
+                    unisex apparel designed for the modern gentleman!</p>
                 </div>
               </div>
             </div>
@@ -277,7 +277,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/causalShirt.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Casual Shirts</a></h5>
+                  <h5 class="services-terri-title"><a href="#">collared t-shirt</a></h5>
                 </div>
               </article>
             </div>
@@ -289,7 +289,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/formalWear.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Formal Wear</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Oversized t-shirt</a></h5>
                 </div>
               </article>
             </div>
@@ -301,7 +301,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/jackets.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Jackets</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Round Neck T Shirts</a></h5>
                 </div>
               </article>
             </div>
@@ -313,7 +313,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/trousers.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Trousers</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Track Pants</a></h5>
                 </div>
               </article>
             </div>
@@ -324,8 +324,8 @@
               <article class="services-terri wow slideInUp">
                 <div class="services-terri-figure"><img src="images/Collection/accessories.jpg" alt="" width="370"
                     height="278" /></div>
-                <div class="services-terri-caption"><span class="services-terri-icon linearicons-graduation-hat"></span>
-                  <h5 class="services-terri-title"><a href="#">Accessories</a></h5>
+                <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
+                  <h5 class="services-terri-title"><a href="#">Unisex Designs</a></h5>
                 </div>
               </article>
             </div>
@@ -336,8 +336,8 @@
               <article class="services-terri wow slideInDown">
                 <div class="services-terri-figure"><img src="images/Collection//footwear.jpg" alt="" width="370"
                     height="278" /></div>
-                <div class="services-terri-caption"><span class="services-terri-icon linearicons-shoes"></span>
-                  <h5 class="services-terri-title"><a href="#">Footwear</a></h5>
+                <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
+                  <h5 class="services-terri-title"><a href="#">hoodies</a></h5>
                 </div>
               </article>
             </div>
@@ -358,7 +358,7 @@
                   range of premium apparel and accessories.</p>
                 <p class="cta-modern-text oh-desktop" data-wow-delay=".1s"><span
                     class="cta-modern-decor wow slideInLeft"></span><span class="d-inline-block wow slideInDown">Zifra
-                    Sharma, Founder</span></p>
+                    </span></p>
                 <a class="button button-md button-secondary-2 button-winona wow fadeInUp" href="#"
                   data-wow-delay=".2s">Explore Our Collection</a>
               </div>
@@ -382,15 +382,14 @@
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Casual Shirt</h6>
+              <h6 class="product-title">Round Neck T Shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$50.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Round Neck t-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -401,15 +400,14 @@
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Formal Suit</h6>
+              <h6 class="product-title">hoodies</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$120.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the hoodies"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-new">New</span>
             </article>
           </div>
@@ -421,15 +419,14 @@
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Leather Jacket</h6>
+              <h6 class="product-title">collared t-shirt</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$150.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the collared t-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -440,16 +437,15 @@
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Stylish Trousers</h6>
+              <h6 class="product-title">Track Pants</h6>
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$60.00</div>
                 <div class="product-price">$40.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Track Pants"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-sale">Sale</span>
             </article>
           </div>
@@ -482,7 +478,7 @@
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">I love shopping at Zifra Creations. The men's wear is top-notch, and the customer service
+                <p class="q">I love shopping at Zifra Creations. The unisex wear is top-notch, and the customer service
                   is always excellent.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-8-115x115.jpg" alt="" width="115" height="115" />
@@ -648,8 +644,8 @@
                   <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
                     <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    
                   </ul>
                 </div>
               </div>
@@ -664,7 +660,7 @@
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2025 All Rights Reserved , Design & Developed by Cyber Phoenix IT Services</span>
+              <span>Copyright © 2025 All Rights Reserved , Design & Developed by</span> <a href="https://Cyberphoenix.in"target="_blank"><span>Cyber Phoenix IT Services</span></a>
               </p>
             </div>
           </div>
