--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html class="wide wow-animation" lang="en">
 
 <head>
-  <title>Product</title>
+  <title>ProductS</title>
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -96,8 +96,8 @@
                   <ul class="list-share-2">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
                     <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    
                   </ul>
                   <a href="quote.html">
                     <button class="btn">Request a quote</button>
@@ -108,11 +108,11 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="products.html">Our Products</a>
+                    </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="products.html">Our Product</a>
-                    </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -215,7 +215,7 @@
     <section class="bg-gray-7">
       <div class="breadcrumbs-custom box-transform-wrap context-dark">
         <div class="container">
-          <h3 class="breadcrumbs-custom-title">Product</h3>
+          <h3 class="breadcrumbs-custom-title">Products</h3>
           <div class="breadcrumbs-custom-decor"></div>
         </div>
         <div class="box-transform" style="background-image: url(images/product.jpg);"></div>
@@ -223,14 +223,14 @@
       <div class="container">
         <ul class="breadcrumbs-custom-path">
           <li><a href="index.html">Home</a></li>
-          <li class="active">Product</li>
+          <li class="active">Products</li>
         </ul>
       </div>
     </section>
     <!-- Base Product-->
     <section class="section section-lg bg-default">
       <div class="container">
-        <h3 class="oh-desktop"><span class="d-inline-block wow slideInUp">Our Collection</span></h3>
+        <h3 class="oh-desktop"><span class="d-inline-block wow slideInUp">Our Collections</span></h3>
         <div class="row row-lg row-30">
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
@@ -240,15 +240,14 @@
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Casual Shirt</h6>
+              <h6 class="product-title">Sweatshirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$50.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Sweatshirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -259,15 +258,14 @@
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Formal Suit</h6>
+              <h6 class="product-title">hoodies</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$120.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the hoodies"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-new">New</span>
             </article>
           </div>
@@ -279,15 +277,14 @@
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Leather Jacket</h6>
+              <h6 class="product-title">collared t-shirt</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$150.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the collared t-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -298,96 +295,91 @@
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Stylish Trousers</h6>
+              <h6 class="product-title">Track Pants</h6>
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$60.00</div>
                 <div class="product-price">$40.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Track Pants"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-sale">Sale</span>
             </article>
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".15s">
-              <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/product-5-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Casual Shirt</h6>
+              <h6 class="product-title">V-neck t-shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$50.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the V-neck T-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".1s">
-              <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/product-6-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Formal Suit</h6>
+              <h6 class="product-title">oversized t-shirt</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$120.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
-              </div><span class="product-badge product-badge-new">New</span>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the oversized T-Shirts"target="_blank">Ask  Details</a></div>
+              </div>
             </article>
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".05s">
-              <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/product-7-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Leather Jacket</h6>
-              <div class="product-price-wrap">
-                <div class="product-price">$150.00</div>
-              </div>
-              <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
-              </div>
-            </article>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3">
-            <!-- Product-->
-            <article class="product wow fadeInLeft">
-              <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162" />
-              </div>
-              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
-                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Stylish Trousers</h6>
+              <h6 class="product-title">Round Neck T Shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$60.00</div>
                 <div class="product-price">$40.00</div>
               </div>
               <div class="product-button">
-                <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
-                    Cart</a></div>
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="#">View
-                    Product</a></div>
-              </div><span class="product-badge product-badge-sale">Sale</span>
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Round Neck T-Shirts"target="_blank">Ask  Details</a></div>
+              </div><span class="product-badge product-badge-sale">SALE</span>
+            </article>
+          </div>
+          <div class="col-sm-6 col-lg-4 col-xl-3">
+            <!-- Product-->
+            <article class="product wow fadeInLeft">
+              <div class="product-figure"><img src="images/product-8-161x162.png" alt="" width="161" height="162" />
+              </div>
+              <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
+                  class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
+              <h6 class="product-title">Gym Clothings</h6>
+              <div class="product-price-wrap">
+                 <div class="product-price">$40.00</div>
+              </div>
+              <div class="product-button">
+                <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
+                    Cart</a></div> -->
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Gym Clothings"target="_blank">Ask  Details</a></div>
+              </div><span class="product-badge product-badge-new">New</span>
             </article>
           </div>
         </div>
@@ -478,8 +470,8 @@
                   <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
                     <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/zifra_creations/profilecard/?igsh=NGwybmpzZW9ydGNh"target="_blank"></a></li>
+                    
                   </ul>
                 </div>
               </div>
@@ -494,7 +486,7 @@
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2025 All Rights Reserved , Design & Developed by Cyber Phoenix IT Services</span>
+              <span>Copyright © 2025 All Rights Reserved , Design & Developed by</span> <a href="https://Cyberphoenix.in"target="_blank"><span>Cyber Phoenix IT Services</span></a>
               </p>
             </div>
           </div>
