--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
@@ -109,6 +109,8 @@
                     <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Products</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="kids.html">Kids</a>
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
@@ -608,7 +610,7 @@
                       src="images/logo gold.png" alt="" width="198" height="66" /></a></div>
                 <div class="col-md-5 col-xl-6">
                   <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58"
-                        height="25" /></span><span class="iso-1-big">9.4k</span></div>
+                        height="25" /></span><span class="iso-1-big">9.8k +</span></div>
                 </div>
               </div>
             </div>
@@ -617,7 +619,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
