--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
@@ -109,6 +109,8 @@
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Products</a>
+                    </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="kids.html">Kids</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
@@ -347,7 +349,7 @@
     </section>
 
     <!-- Section CTA-->
-    <section class="primary-overlay section parallax-container" data-parallax-img="images/menleft.jpg">
+    <section class="primary-overlay section parallax-container" data-parallax-img="images/global.png">
       <div class="parallax-content section-xl context-dark text-md-left">
         <div class="container">
           <div class="row justify-content-end">
@@ -389,7 +391,7 @@
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
                     Cart</a></div> -->
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Round Neck t-shirts"target="_blank">Ask  Details</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Creations , Please share more details about the Round Neck t-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -407,7 +409,7 @@
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
                     Cart</a></div> -->
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the hoodies"target="_blank">Ask  Details</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Creations , Please share more details about the hoodies"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-new">New</span>
             </article>
           </div>
@@ -426,7 +428,7 @@
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
                     Cart</a></div> -->
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the collared t-shirts"target="_blank">Ask  Details</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Creations , Please share more details about the collared t-shirts"target="_blank">Ask  Details</a></div>
               </div>
             </article>
           </div>
@@ -445,7 +447,7 @@
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
                     Cart</a></div> -->
-                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Please share more details about the Track Pants"target="_blank">Ask  Details</a></div>
+                <div class="button-wrap"><a class="button button-xs button-secondary button-winona" href="https://api.whatsapp.com/send?phone=+919715256155&text= Hey Zifra Creations , Please share more details about the Track Pants"target="_blank">Ask  Details</a></div>
               </div><span class="product-badge product-badge-sale">Sale</span>
             </article>
           </div>
@@ -622,7 +624,7 @@
                       src="images/logo gold.png" alt="" width="198" height="66" /></a></div>
                 <div class="col-md-5 col-xl-6">
                   <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58"
-                        height="25" /></span><span class="iso-1-big">9.4k</span></div>
+                        height="25" /></span><span class="iso-1-big">9.8k +</span></div>
                 </div>
               </div>
             </div>
@@ -631,7 +633,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
