--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:+91 7200439935">+91 7200439935</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:+917200439935">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
